--- a/Minggu-4/lat form.html
+++ b/Minggu-4/lat form.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <title>Buku Tamu</title>
     <link rel="stylesheet" href="new.css">
@@ -22,13 +23,6 @@
                 <td>Email</td><td> <input type="email" name="email" size="55"></td></tr>
             <tr>
                 <td>Nomor HP</td><td> <input type="text" name="nomor hp" size="55"></td>
-            </tr>
-            <tr>
-                <td>Sosial Media</td><td> 
-                <input type="checkbox" name="facebook" value="Ya">Facebook
-                <input type="checkbox" name="instagram" value="Ya">Instagram 
-                <input type="checkbox" name="twitter" value="Ya">Twitter
-            </td>
             </tr>
             <tr>
                 <td></td><td>
